err/monique-tables.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/monique_tables-1.1.egg-info'...
Listing './lib/python3.5/site-packages/mqetables'...
Compiling './lib/python3.5/site-packages/mqetables/asciiparsing.py'...
***   File "./lib/python3.5/site-packages/mqetables/asciiparsing.py", line 288
    lambda (hs, count): (-count,
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mqetables/ext'...
Compiling './lib/python3.5/site-packages/mqetables/ext/csv.py'...
***   File "./lib/python3.5/site-packages/mqetables/ext/csv.py", line 54
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mqetables/ext/test_csv.py'...
***   File "./lib/python3.5/site-packages/mqetables/ext/test_csv.py", line 982
    if test_support.verbose: print "*** skipping leakage tests ***"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mqetables/parseany.py'...
***   File "./lib/python3.5/site-packages/mqetables/parseany.py", line 305
    print json.dumps(d)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mqetables/util.py'...
***   File "./lib/python3.5/site-packages/mqetables/util.py", line 207
    for a, b in itertools.groupby(enumerate(i), lambda (x, y): y - x):
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parsedatetime'...
Listing './lib/python3.5/site-packages/parsedatetime/pdt_locales'...
Listing './lib/python3.5/site-packages/parsedatetime-2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pytimeparse'...
Listing './lib/python3.5/site-packages/pytimeparse/tests'...
Listing './lib/python3.5/site-packages/pytimeparse-1.1.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
